# MLComputeCpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
MLComputeCpp/: CMakeLists.txt  CppMLCActivationDescriptor.h  CppMLCActivationDescriptor.mm  CppMLCActivationLayer.h  CppMLCActivationLayer.mm  CppMLCAdamOptimizer.h  CppMLCAdamOptimizer.mm  CppMLCArithmeticLayer.h  CppMLCArithmeticLayer.mm  CppMLCBatchNormalizationLayer.h  CppMLCBatchNormalizationLayer.mm  CppMLCConcatenationLayer.h  CppMLCConcatenationLayer.mm  CppMLCConvolutionDescriptor.h  CppMLCConvolutionDescriptor.mm  CppMLCConvolutionLayer.h  CppMLCConvolutionLayer.mm  CppMLCDevice.h  CppMLCDevice.mm  CppMLCDropoutLayer.h  CppMLCDropoutLayer.mm  CppMLCEmbeddingDescriptor.h  CppMLCEmbeddingDescriptor.mm  CppMLCEmbeddingLayer.h  CppMLCEmbeddingLayer.mm  CppMLCFullyConnectedLayer.h  CppMLCFullyConnectedLayer.mm  CppMLCGramMatrixLayer.h  CppMLCGramMatrixLayer.mm  CppMLCGraph.h  CppMLCGraph.mm  CppMLCGroupNormalizationLayer.h  CppMLCGroupNormalizationLayer.mm  CppMLCInferenceGraph.h  CppMLCInferenceGraph.mm  CppMLCLayer.h  CppMLCLayer.mm  CppMLCLayerNormalizationLayer.h  CppMLCLayerNormalizationLayer.mm  CppMLCLossDescriptor.h  (+50 more)
